--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sacjs",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Set Associative Cache",
   "main": "index.js",
   "scripts": {
@@ -19,5 +19,9 @@
   "devDependencies": {
     "chai": "^3.0.0",
     "mocha": "^2.2.5"
+  },
+  "dependencies": {
+    "json-stable-stringify": "^1.0.0",
+    "md5-jkmyers": "0.0.1"
   }
 }
