--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sacjs",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "Set Associative Cache",
   "main": "index.js",
   "scripts": {
@@ -21,7 +21,6 @@
     "mocha": "^2.2.5"
   },
   "dependencies": {
-    "json-stable-stringify": "^1.0.0",
-    "md5-jkmyers": "0.0.1"
+    "json-stable-stringify": "^1.0.0"
   }
 }
