--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sacjs",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Set Associative Cache",
-  "main": "index.js",
+  "main": "lib/cache.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha --reporter=spec lib/*.spec.js"
   },
@@ -21,6 +21,6 @@
     "mocha": "^2.2.5"
   },
   "dependencies": {
-    "json-stable-stringify": "^1.0.0"
+    "json-stable-stringify": "^1.0.1"
   }
 }
