--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Set Associative Cache",
   "main": "lib/cache.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --reporter=spec lib/*.spec.js"
+    "test-spec": "./node_modules/.bin/mocha --reporter=spec lib/*.spec.js",
+    "test": "nyc npm run test-spec"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,18 @@
   "homepage": "https://github.com/epoberezkin/sacjs",
   "devDependencies": {
     "chai": "^3.0.0",
-    "mocha": "^2.2.5"
+    "coveralls": "^2.11.15",
+    "mocha": "^2.2.5",
+    "nyc": "^10.0.0",
+    "pre-commit": "^1.2.2"
   },
   "dependencies": {
     "json-stable-stringify": "^1.0.1"
+  },
+  "nyc": {
+    "reporter": [
+      "lcov",
+      "text-summary"
+    ]
   }
 }
