--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.3.0",
   "description": "Set Associative Cache",
   "main": "lib/cache.js",
+  "types": "cache.d.js",
   "scripts": {
     "test-spec": "./node_modules/.bin/mocha --reporter=spec lib/*.spec.js",
     "test": "nyc npm run test-spec"
